# kira-web-demo

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  webpack.common.js  webpack.dev.js
src/: button.css  index.js  style.css
src/rust/: lib.rs  select_demo.rs  utils.rs
src/rust/demos/: drum_fill_demo.rs  mod.rs  underwater_demo.rs
src/rust/demos/drum_fill_demo/: beat_display.rs
