[package]
name = "kira-web-demo"
version = "0.1.0"
authors = ["Théo Degioanni <moxinilian@tutanota.com>", "Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
kira = { path = "../kira/kira", default-features = false }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'AudioContext',
  'AudioBuffer',
]

[profile.dev]
opt-level = 3
